# Sparklette

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/tests/unit/: app.spec.js
static/: index.html
