[project]
name = "fastapi-vue-app"
version = "0.1.0"
description = "A web application with FastAPI backend and Vue frontend"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]
